<resources>
    <string name="app_name">CurrencyHolder</string>
    <string name="finance_toolbar_title">Finances</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="about_toolbar_title">About</string>
    <string name="add_transaction_toolbar_title">Add transaction</string>
    <string name="title_no_transactions">Here will be your transaction history</string>
    <string name="nav_header_title">Finance</string>
    <string name="nav_header_description">Your money - our application</string>
    <!-- format -->
    <string name="format_balance_text">%1$.2f %2$s</string>

    <string name="user_name_hint">Name</string>
    <string name="info_description">This application is the best Financial Tracker ever.\nIt was made during Yandex mobile developer school</string>
    <string name="info_button_title">Tap me</string>

    <string name="amount_hint">Amount</string>
    <string name="date_hint">Date</string>
    <string name="save_btn_title">Add</string>
    <string name="values_validate_toast">Incorrect input data</string>

    <string name="outcome_title">Outcome</string>
    <string name="income_title">Income</string>

    <string name="balance_add_transaction_title">Choose balance:</string>
    <string name="currency_add_transaction_title">Choose currency:</string>
    <string name="category_type_add_transaction_title">Choose type:</string>
    <string name="category_add_transaction_title">Choose category:</string>

    <string name="convert_message">Balance will have convert by current exchange rates</string>
    <string name="exchange_response_exception">Exchange response exception</string>

    <string name="about_send_email">Feedback</string>

    <string name="settings_switch_outgo">Show only outgo</string>
    <string name="settings_switch_legend">Show chart legend</string>
    <string name="mit_license" translatable="false">Copyright © 2018 Ilia Ilemkov
            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
            SOFTWARE.
    </string>
    <string name="choose_period">Choose transaction period</string>
    <string name="dashboard_toolbar_title">Dashboard</string>
    <string name="logo">logo</string>
    <string name="edit_title">Edit</string>
    <string name="delete_title">Delete</string>
    <string name="edit_transaction_toolbar_title">Edit transaction</string>
    <string name="yandex">Yandex</string>
    <string name="edit_button">Edit</string>
</resources>
